<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <artifactId>Seilnet-Firewall</artifactId>
  <version>1.0-SNAPSHOT</version>
  <parent>
    <artifactId>Seilnet</artifactId>
    <groupId>de.rwth.seilgraben.seilnet</groupId>
    <version>1.0-SNAPSHOT</version>
  </parent>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.3</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-shade-plugin</artifactId>
            <version>3.2.0</version>
            <executions>
                <execution>
                    <phase>package</phase>
                    <goals>
                        <goal>shade</goal>
                    </goals>
                    <configuration>
                        <transformers>
                            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                <mainClass>de.rwth.seilgraben.seilnet.firewall.FirewallMain</mainClass>
                                <manifestEntries>
                                    <Add-Opens>java.base/java.net</Add-Opens>
                                </manifestEntries>
                            </transformer>
                        </transformers>
                        <filters>
                            <filter>
                                <artifact>*:*</artifact>
                                <excludes>
                                    <exclude>META-INF/*.SF</exclude>
                                    <exclude>META-INF/*.DSA</exclude>
                                    <exclude>META-INF/*.RSA</exclude>
                                </excludes>
                            </filter>
                        </filters>
                    </configuration>
                </execution>
            </executions>
        </plugin>
        <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <version>1.2.1</version>
            <configuration>
                <mainClass>de.rwth.seilgraben.seilnet.firewall.FirewallMain</mainClass>
            </configuration>
        </plugin>
    </plugins>
  </build>
  <dependencies>
  	<dependency>
  		<groupId>de.rwth.seilgraben.seilnet</groupId>
  		<artifactId>Seilnet-Shared</artifactId>
  		<version>1.0-SNAPSHOT</version>
  	</dependency>
  	<dependency>
  		<groupId>com.sparkjava</groupId>
  		<artifactId>spark-core</artifactId>
  		<version>2.9.4</version>
  	</dependency>
  	<dependency>
  		<groupId>com.google.code.gson</groupId>
  		<artifactId>gson</artifactId>
  		<version>2.10.1</version>
  	</dependency>
  </dependencies>
</project>